<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#E1F5FE"
    android:gravity="center_vertical">

    <!-- Title -->
    <TextView
        android:id="@+id/editCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Category"
        android:textSize="35sp"
        android:layout_marginBottom="30dp"
        android:textColor="#0288D1"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="20dp"/>

    <!-- Category Name Input -->
    <EditText
        android:id="@+id/editTextCategoryName"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="category_name"
        android:hint="@string/category_name_hint"
        android:inputType="text"
        android:textColor="#0288D1"
        android:padding="10dp"/>


    <!-- Category Description Input -->
    <EditText
        android:id="@+id/editTextCategoryDescription"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="category_description"
        android:hint="@string/category_description_hint"
        android:inputType="textMultiLine"
        android:textColor="#0288D1"
        android:padding="10dp"
       />

    <!-- Add Category Button -->
    <Button
        android:id="@+id/buttonAddCategory"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/add_category"
        android:background="#0288D1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:padding="10dp"/>

</LinearLayout>
